[gd_scene load_steps=2 format=3 uid="uid://bqjlvrwl7jpbg"]

[ext_resource type="Script" path="res://Crafting_UI/item_ui.gd" id="1_jecnw"]

[node name="Item_UI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jecnw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1511.0
offset_bottom = 949.0
scale = Vector2(1.26926, 1.13985)

[node name="Item_Picture" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 445.0

[node name="Item_Name" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 458.877
offset_right = 510.0
offset_bottom = 548.877

[node name="Item_Title" type="Label" parent="Panel/Item_Name"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "ITEM_TITLE"

[node name="Item_Description" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 521.0
offset_top = 10.0
offset_right = 1500.0
offset_bottom = 504.0

[node name="Item_DescriptionLabel" type="RichTextLabel" parent="Panel/Item_Description"]
layout_mode = 2
offset_left = 10.0001
offset_top = 10.0
offset_right = 969.0
offset_bottom = 484.0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "ITEM DESCRIPTION"
visible_characters_behavior = 1

[node name="Item_Effect" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 563.0
offset_right = 510.0
offset_bottom = 936.0

[node name="Item_EffectLabel" type="RichTextLabel" parent="Panel/Item_Effect"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 489.0
offset_bottom = 363.0
theme_override_font_sizes/normal_font_size = 25
text = "ITEM EFFECT DESCRIPTION"

[node name="Item_Requirements" type="Panel" parent="Panel"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 521.0
offset_top = 518.0
offset_right = 1500.0
offset_bottom = 674.0

[node name="Item_RequirementsLabel" type="RichTextLabel" parent="Panel/Item_Requirements"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 966.0
offset_bottom = 143.0
theme_override_font_sizes/normal_font_size = 30
text = "ITEM MATERIAL REQUIREMENTS"

[node name="Craft_Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1203.0
offset_top = 793.0
offset_right = 1485.0
offset_bottom = 916.0
text = "Craft"

[node name="Cancel_Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 902.0
offset_top = 793.0
offset_right = 1184.0
offset_bottom = 916.0
text = "Cancel"

[node name="Warning" type="Panel" parent="Panel"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -163.0
offset_right = 232.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="CraftingTimer" type="Timer" parent="Panel/Warning"]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="Panel/Warning"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -70.5
offset_right = 217.0
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Currently Crafting
 an Item"
horizontal_alignment = 1

[node name="NowCrafting" type="Panel" parent="Panel"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -163.0
offset_right = 327.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="NowCraftingtimer" type="Timer" parent="Panel/NowCrafting"]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/NowCrafting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/NowCrafting/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Item is currently
being crafted!"
horizontal_alignment = 1

[node name="WarningInsufficient" type="Panel" parent="Panel"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -163.0
offset_right = 327.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="warningtimer" type="Timer" parent="Panel/WarningInsufficient"]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/WarningInsufficient"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/WarningInsufficient/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Insufficient Materials
to Craft Item!"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Craft_Button" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="Panel/Cancel_Button" to="." method="_on_cancel_button_pressed"]
[connection signal="timeout" from="Panel/Warning/CraftingTimer" to="." method="_on_crafting_timer_timeout"]
[connection signal="timeout" from="Panel/NowCrafting/NowCraftingtimer" to="." method="_on_now_craftingtimer_timeout"]
[connection signal="timeout" from="Panel/WarningInsufficient/warningtimer" to="." method="_on_warningtimer_timeout"]
